--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -7,8 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-asfda
 <div id="app"></div>
-<script src="./main.js"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
