--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -9,5 +9,11 @@
 <body>
 <div id="app"></div>
 <script src="main.js" type="module"></script>
+<script>
+  var str = 'hello world';
+  str = str.replace(/e(\w)/g, (...arr) => {
+    return arr[1].toUpperCase()
+  })
+</script>
 </body>
 </html>
